Proyecto Inicial Calculadora

--- a/Proyectos/1ªEvaluacion/Calculadora/index.html
+++ b/Proyectos/1ªEvaluacion/Calculadora/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link src="estilos.css" rel="stylesheet" type="text/css">
+    <link href="estilos.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
     <h1>Calculadora</h1>
@@ -18,5 +19,8 @@
     <button id="calcular">Calcular</button>
 
     <h3 id="resultado">Resultado</h3>
+
+    <script src="operativa.js"></script>
+
 </body>
 </html>
